--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,10 @@
   background-color: black ;
 }
 
+.tables-page {
+  background-color: black;
+} 
+
 
 /*Hover Zoom Images*/
 /* Define zoom effect with smooth transition */
