--- a/src/styles/expandcards.module.css
+++ b/src/styles/expandcards.module.css
@@ -9,7 +9,7 @@
 
 .wrapper {
   width: 100%;
-  height: 100vh;
+  height: 80vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -24,11 +24,11 @@
 
 .card {
   width: 80px;
-  border-radius: 2rem;
+  border-radius: 2.5rem;
   background-size: cover;
   cursor: pointer;
   overflow: hidden;
-  margin: 0 -10px;
+  margin: 0 5px;
   display: flex;
   align-items: flex-end;
   transition: 0.6s cubic-bezier(0.28, -0.03, 0, 0.99);
@@ -42,7 +42,7 @@
 }
 
 .icon {
-  background: #223;
+  background: rgb(92, 92, 94);
   color: white;
   border-radius: 50%;
   width: 50px;
@@ -58,28 +58,32 @@
   flex-direction: column;
   overflow: hidden;
   height: 80px;
-  width: 520px;
+  width: 400px;
   opacity: 0;
   transform: translateY(30px);
   transition-delay: 0.3s;
   transition: all 0.3s ease;
+  
 }
 
-.description p {
-  color: #b0b0ba;
-  padding-top: 5px;
-}
-
-.description h4 {
+.description h5 {
   text-transform: uppercase;
+  margin-bottom: 2px; /* Reduce space below the heading */
 }
+
+.description a {
+  color: #b0b0ba;
+  font-size: 13px;
+  margin-top: 0;  /* Remove any space above the paragraph */
+}
+
 
 .input {
   display: none;
 }
 
 .input:checked + label {
-  width: 600px;
+  width: 410px;
 }
 
 .input:checked + label .description {
